Add api to get post detail
