# public/docs/swagger.json
@@ -97,6 +97,31 @@
                 ]
             }
         },
+        "/posts/{id}": {
+            "get": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Post detail",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Post id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success get post detail"
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "tags": [
